LangGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from LangGrammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseQuery -> Query                         (0)
	Query -> Query1                                    (1)
	Query -> Query1 where CreateVars                   (2)
	Query1 -> Func StringExp                           (3)
	Query1 -> Func StringExp '|' Query2                (4)
	Query2 -> Func                                     (5)
	Query2 -> Func '|' Query2                          (6)
	CreateVars -> CreateVar CreateVars                 (7)
	CreateVars -> CreateVar                            (8)
	CreateVar -> var '=' IntExp                        (9)
	CreateVar -> var '=' StringExp                     (10)
	CreateVar -> var '=' BoolExp                       (11)
	CreateVar -> var '=' IntOp                         (12)
	Func -> filter '(' FilterEl ',' FilterEl ',' Literal ')'   (13)
	Func -> map '(' Cond ')'                           (14)
	Func -> union SList                                (15)
	Func -> join JoinOption '(' Node ',' Node ')' SList   (16)
	FilterEl -> '_'                                    (17)
	FilterEl -> List                                   (18)
	JoinOption -> '-r' '-l'                            (19)
	JoinOption -> '-l' '-r'                            (20)
	JoinOption -> '-l'                                 (21)
	JoinOption -> '-r'                                 (22)
	SList -> '[' SListElem ']'                         (23)
	SList -> StringExp1                                (24)
	SListElem -> StringExp1                            (25)
	SListElem -> StringExp1 ',' SListElem              (26)
	List -> '[' ListElem ']'                           (27)
	List -> Literal1                                   (28)
	ListElem -> Literal1                               (29)
	ListElem -> Literal1 ',' ListElem                  (30)
	Cond -> Action                                     (31)
	Cond -> '(' BoolExp ')' '?' Cond ':' Cond          (32)
	Action -> subj '=' StringExp                       (33)
	Action -> pred '=' StringExp                       (34)
	Action -> obj '=' String                           (35)
	Action -> obj '=' IntExp                           (36)
	Action -> obj '=' BoolExp                          (37)
	Action -> obj '=' IntOp                            (38)
	Action -> obj '=' var                              (39)
	Literal -> Literal1                                (40)
	Literal -> '_'                                     (41)
	Literal1 -> IntExp                                 (42)
	Literal1 -> BoolExp                                (43)
	Literal1 -> StringExp                              (44)
	IntExp -> IntExp '+' IntExp                        (45)
	IntExp -> var '+' IntExp                           (46)
	IntExp -> IntExp '+' var                           (47)
	IntExp -> IntExp '-' IntExp                        (48)
	IntExp -> var '-' IntExp                           (49)
	IntExp -> IntExp '-' var                           (50)
	IntExp -> IntExp '*' IntExp                        (51)
	IntExp -> var '*' IntExp                           (52)
	IntExp -> IntExp '*' var                           (53)
	IntExp -> IntExp '/' IntExp                        (54)
	IntExp -> var '/' IntExp                           (55)
	IntExp -> IntExp '/' var                           (56)
	IntExp -> IntExp '^' IntExp                        (57)
	IntExp -> var '^' IntExp                           (58)
	IntExp -> IntExp '^' var                           (59)
	IntExp -> '(' IntExp ')'                           (60)
	IntExp -> '-' IntExp                               (61)
	IntExp -> int                                      (62)
	IntOp -> IntOp '+' IntOp                           (63)
	IntOp -> var '+' IntOp                             (64)
	IntOp -> IntOp '+' var                             (65)
	IntOp -> IntExp '+' IntOp                          (66)
	IntOp -> IntOp '+' IntExp                          (67)
	IntOp -> IntOp '-' IntOp                           (68)
	IntOp -> var '-' IntOp                             (69)
	IntOp -> IntOp '-' var                             (70)
	IntOp -> IntExp '-' IntOp                          (71)
	IntOp -> IntOp '-' IntExp                          (72)
	IntOp -> IntOp '*' IntOp                           (73)
	IntOp -> var '*' IntOp                             (74)
	IntOp -> IntOp '*' var                             (75)
	IntOp -> IntExp '*' IntOp                          (76)
	IntOp -> IntOp '*' IntExp                          (77)
	IntOp -> IntOp '/' IntOp                           (78)
	IntOp -> var '/' IntOp                             (79)
	IntOp -> IntOp '/' var                             (80)
	IntOp -> IntExp '/' IntOp                          (81)
	IntOp -> IntOp '/' IntExp                          (82)
	IntOp -> IntOp '^' IntOp                           (83)
	IntOp -> var '^' IntOp                             (84)
	IntOp -> IntOp '^' var                             (85)
	IntOp -> IntExp '^' IntOp                          (86)
	IntOp -> IntOp '^' IntExp                          (87)
	IntOp -> '(' IntOp ')'                             (88)
	IntOp -> '-' IntOp                                 (89)
	IntOp -> obj                                       (90)
	BoolExp -> BoolExp and BoolExp                     (91)
	BoolExp -> var and BoolExp                         (92)
	BoolExp -> BoolExp and var                         (93)
	BoolExp -> BoolExp or BoolExp                      (94)
	BoolExp -> var or BoolExp                          (95)
	BoolExp -> BoolExp or var                          (96)
	BoolExp -> IntExp deq IntExp                       (97)
	BoolExp -> IntExp deq var                          (98)
	BoolExp -> IntExp '<' IntExp                       (99)
	BoolExp -> IntExp '>' IntExp                       (100)
	BoolExp -> IntExp '<' obj                          (101)
	BoolExp -> obj '<' IntExp                          (102)
	BoolExp -> StringExp deq StringExp                 (103)
	BoolExp -> StringExp deq subj                      (104)
	BoolExp -> subj deq StringExp                      (105)
	BoolExp -> StringExp deq pred                      (106)
	BoolExp -> pred deq StringExp                      (107)
	BoolExp -> StringExp deq obj                       (108)
	BoolExp -> obj deq StringExp                       (109)
	BoolExp -> '(' BoolExp ')'                         (110)
	BoolExp -> true                                    (111)
	BoolExp -> false                                   (112)
	StringExp -> String                                (113)
	StringExp -> var                                   (114)
	StringExp1 -> StringExp                            (115)
	StringExp1 -> '_'                                  (116)
	Node -> subj                                       (117)
	Node -> pred                                       (118)
	Node -> obj                                        (119)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	','            { TokenComma _ }
	int            { TokenInt _ $$ }
	subj           { TokenSubj _ }
	pred           { TokenPred _ }
	obj            { TokenObj _ }
	true           { TokenTrue _ }
	false          { TokenFalse _ }
	'-l'           { TokenLJoin _ }
	'-r'           { TokenRJoin _ }
	'<'            { TokenLT _ }
	'>'            { TokenGT _ }
	deq            { TokenDEQ _ }
	'='            { TokenEQ _ }
	'+'            { TokenPlus _ }
	'-'            { TokenMinus _ }
	'*'            { TokenTimes _ }
	'/'            { TokenDiv _ }
	'^'            { TokenExp _ }
	'('            { TokenLParen _ }
	')'            { TokenRParen _ }
	'['            { TokenLBrack _ }
	']'            { TokenRBrack _ }
	String         { TokenString _ $$ }
	'|'            { TokenPipe _ }
	'?'            { TokenQuestion _ }
	':'            { TokenColon _ }
	'_'            { TokenAll _ }
	filter         { TokenFilter _ }
	map            { TokenMap _ }
	union          { TokenUnion _ }
	join           { TokenJoin _ }
	where          { TokenWhere _ }
	and            { TokenAnd _ }
	or             { TokenOr _ }
	var            { TokenVar _ $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseQuery rule  0
	Query           rules 1, 2
	Query1          rules 3, 4
	Query2          rules 5, 6
	CreateVars      rules 7, 8
	CreateVar       rules 9, 10, 11, 12
	Func            rules 13, 14, 15, 16
	FilterEl        rules 17, 18
	JoinOption      rules 19, 20, 21, 22
	SList           rules 23, 24
	SListElem       rules 25, 26
	List            rules 27, 28
	ListElem        rules 29, 30
	Cond            rules 31, 32
	Action          rules 33, 34, 35, 36, 37, 38, 39
	Literal         rules 40, 41
	Literal1        rules 42, 43, 44
	IntExp          rules 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62
	IntOp           rules 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90
	BoolExp         rules 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112
	StringExp       rules 113, 114
	StringExp1      rules 115, 116
	Node            rules 117, 118, 119

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseQuery -> . Query                        (rule 0)

	filter         shift, and enter state 4
	map            shift, and enter state 5
	union          shift, and enter state 6
	join           shift, and enter state 7

	Query          goto state 8
	Query1         goto state 9
	Func           goto state 3

State 1

	Query -> . Query1                                   (rule 1)

	filter         shift, and enter state 4
	map            shift, and enter state 5
	union          shift, and enter state 6
	join           shift, and enter state 7

	Query1         goto state 2
	Func           goto state 3

State 2

	Query -> Query1 .                                   (rule 1)



State 3

	Query1 -> Func . StringExp                          (rule 3)
	Query1 -> Func . StringExp '|' Query2               (rule 4)

	String         shift, and enter state 18
	var            shift, and enter state 20

	StringExp      goto state 23

State 4

	Func -> filter . '(' FilterEl ',' FilterEl ',' Literal ')'    (rule 13)

	'('            shift, and enter state 22


State 5

	Func -> map . '(' Cond ')'                          (rule 14)

	'('            shift, and enter state 21


State 6

	Func -> union . SList                               (rule 15)

	'['            shift, and enter state 17
	String         shift, and enter state 18
	'_'            shift, and enter state 19
	var            shift, and enter state 20

	SList          goto state 14
	StringExp      goto state 15
	StringExp1     goto state 16

State 7

	Func -> join . JoinOption '(' Node ',' Node ')' SList    (rule 16)

	'-l'           shift, and enter state 12
	'-r'           shift, and enter state 13

	JoinOption     goto state 11

State 8

	%start_parseQuery -> Query .                        (rule 0)

	%eof           accept


State 9

	Query -> Query1 .                                   (rule 1)
	Query -> Query1 . where CreateVars                  (rule 2)

	where          shift, and enter state 10
	%eof           reduce using rule 1


State 10

	Query -> Query1 where . CreateVars                  (rule 2)

	var            shift, and enter state 55

	CreateVars     goto state 53
	CreateVar      goto state 54

State 11

	Func -> join JoinOption . '(' Node ',' Node ')' SList    (rule 16)

	'('            shift, and enter state 52


State 12

	JoinOption -> '-l' . '-r'                           (rule 20)
	JoinOption -> '-l' .                                (rule 21)

	'-r'           shift, and enter state 51
	'('            reduce using rule 21


State 13

	JoinOption -> '-r' . '-l'                           (rule 19)
	JoinOption -> '-r' .                                (rule 22)

	'-l'           shift, and enter state 50
	'('            reduce using rule 22


State 14

	Func -> union SList .                               (rule 15)

	String         reduce using rule 15
	'|'            reduce using rule 15
	where          reduce using rule 15
	var            reduce using rule 15
	%eof           reduce using rule 15


State 15

	StringExp1 -> StringExp .                           (rule 115)

	','            reduce using rule 115
	']'            reduce using rule 115
	String         reduce using rule 115
	'|'            reduce using rule 115
	where          reduce using rule 115
	var            reduce using rule 115
	%eof           reduce using rule 115


State 16

	SList -> StringExp1 .                               (rule 24)

	String         reduce using rule 24
	'|'            reduce using rule 24
	where          reduce using rule 24
	var            reduce using rule 24
	%eof           reduce using rule 24


State 17

	SList -> '[' . SListElem ']'                        (rule 23)

	String         shift, and enter state 18
	'_'            shift, and enter state 19
	var            shift, and enter state 20

	SListElem      goto state 48
	StringExp      goto state 15
	StringExp1     goto state 49

State 18

	StringExp -> String .                               (rule 113)

	','            reduce using rule 113
	deq            reduce using rule 113
	')'            reduce using rule 113
	']'            reduce using rule 113
	String         reduce using rule 113
	'|'            reduce using rule 113
	':'            reduce using rule 113
	where          reduce using rule 113
	and            reduce using rule 113
	or             reduce using rule 113
	var            reduce using rule 113
	%eof           reduce using rule 113


State 19

	StringExp1 -> '_' .                                 (rule 116)

	','            reduce using rule 116
	']'            reduce using rule 116
	String         reduce using rule 116
	'|'            reduce using rule 116
	where          reduce using rule 116
	var            reduce using rule 116
	%eof           reduce using rule 116


State 20

	StringExp -> var .                                  (rule 114)

	','            reduce using rule 114
	')'            reduce using rule 114
	']'            reduce using rule 114
	String         reduce using rule 114
	'|'            reduce using rule 114
	':'            reduce using rule 114
	where          reduce using rule 114
	and            reduce using rule 114
	or             reduce using rule 114
	var            reduce using rule 114
	%eof           reduce using rule 114


State 21

	Func -> map '(' . Cond ')'                          (rule 14)

	subj           shift, and enter state 44
	pred           shift, and enter state 45
	obj            shift, and enter state 46
	'('            shift, and enter state 47

	Cond           goto state 42
	Action         goto state 43

State 22

	Func -> filter '(' . FilterEl ',' FilterEl ',' Literal ')'    (rule 13)

	int            shift, and enter state 31
	subj           shift, and enter state 32
	pred           shift, and enter state 33
	obj            shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 38
	'['            shift, and enter state 39
	String         shift, and enter state 18
	'_'            shift, and enter state 40
	var            shift, and enter state 41

	FilterEl       goto state 25
	List           goto state 26
	Literal1       goto state 27
	IntExp         goto state 28
	BoolExp        goto state 29
	StringExp      goto state 30

State 23

	Query1 -> Func StringExp .                          (rule 3)
	Query1 -> Func StringExp . '|' Query2               (rule 4)

	'|'            shift, and enter state 24
	where          reduce using rule 3
	%eof           reduce using rule 3


State 24

	Query1 -> Func StringExp '|' . Query2               (rule 4)

	filter         shift, and enter state 4
	map            shift, and enter state 5
	union          shift, and enter state 6
	join           shift, and enter state 7

	Query2         goto state 101
	Func           goto state 102

State 25

	Func -> filter '(' FilterEl . ',' FilterEl ',' Literal ')'    (rule 13)

	','            shift, and enter state 100


State 26

	FilterEl -> List .                                  (rule 18)

	','            reduce using rule 18


State 27

	List -> Literal1 .                                  (rule 28)

	','            reduce using rule 28


State 28

	Literal1 -> IntExp .                                (rule 42)
	IntExp -> IntExp . '+' IntExp                       (rule 45)
	IntExp -> IntExp . '+' var                          (rule 47)
	IntExp -> IntExp . '-' IntExp                       (rule 48)
	IntExp -> IntExp . '-' var                          (rule 50)
	IntExp -> IntExp . '*' IntExp                       (rule 51)
	IntExp -> IntExp . '*' var                          (rule 53)
	IntExp -> IntExp . '/' IntExp                       (rule 54)
	IntExp -> IntExp . '/' var                          (rule 56)
	IntExp -> IntExp . '^' IntExp                       (rule 57)
	IntExp -> IntExp . '^' var                          (rule 59)
	BoolExp -> IntExp . deq IntExp                      (rule 97)
	BoolExp -> IntExp . deq var                         (rule 98)
	BoolExp -> IntExp . '<' IntExp                      (rule 99)
	BoolExp -> IntExp . '>' IntExp                      (rule 100)
	BoolExp -> IntExp . '<' obj                         (rule 101)

	','            reduce using rule 42
	'<'            shift, and enter state 92
	'>'            shift, and enter state 93
	deq            shift, and enter state 94
	'+'            shift, and enter state 95
	'-'            shift, and enter state 96
	'*'            shift, and enter state 97
	'/'            shift, and enter state 98
	'^'            shift, and enter state 99
	')'            reduce using rule 42
	']'            reduce using rule 42


State 29

	Literal1 -> BoolExp .                               (rule 43)
	BoolExp -> BoolExp . and BoolExp                    (rule 91)
	BoolExp -> BoolExp . and var                        (rule 93)
	BoolExp -> BoolExp . or BoolExp                     (rule 94)
	BoolExp -> BoolExp . or var                         (rule 96)

	','            reduce using rule 43
	')'            reduce using rule 43
	']'            reduce using rule 43
	and            shift, and enter state 90
	or             shift, and enter state 91


State 30

	Literal1 -> StringExp .                             (rule 44)
	BoolExp -> StringExp . deq StringExp                (rule 103)
	BoolExp -> StringExp . deq subj                     (rule 104)
	BoolExp -> StringExp . deq pred                     (rule 106)
	BoolExp -> StringExp . deq obj                      (rule 108)

	','            reduce using rule 44
	deq            shift, and enter state 89
	')'            reduce using rule 44
	']'            reduce using rule 44


State 31

	IntExp -> int .                                     (rule 62)

	','            reduce using rule 62
	'<'            reduce using rule 62
	'>'            reduce using rule 62
	deq            reduce using rule 62
	'+'            reduce using rule 62
	'-'            reduce using rule 62
	'*'            reduce using rule 62
	'/'            reduce using rule 62
	'^'            reduce using rule 62
	')'            reduce using rule 62
	']'            reduce using rule 62
	':'            reduce using rule 62
	and            reduce using rule 62
	or             reduce using rule 62
	var            reduce using rule 62
	%eof           reduce using rule 62


State 32

	BoolExp -> subj . deq StringExp                     (rule 105)

	deq            shift, and enter state 88


State 33

	BoolExp -> pred . deq StringExp                     (rule 107)

	deq            shift, and enter state 87


State 34

	BoolExp -> obj . '<' IntExp                         (rule 102)
	BoolExp -> obj . deq StringExp                      (rule 109)

	'<'            shift, and enter state 85
	deq            shift, and enter state 86


State 35

	BoolExp -> true .                                   (rule 111)

	','            reduce using rule 111
	')'            reduce using rule 111
	']'            reduce using rule 111
	':'            reduce using rule 111
	and            reduce using rule 111
	or             reduce using rule 111
	var            reduce using rule 111
	%eof           reduce using rule 111


State 36

	BoolExp -> false .                                  (rule 112)

	','            reduce using rule 112
	')'            reduce using rule 112
	']'            reduce using rule 112
	':'            reduce using rule 112
	and            reduce using rule 112
	or             reduce using rule 112
	var            reduce using rule 112
	%eof           reduce using rule 112


State 37

	IntExp -> '-' . IntExp                              (rule 61)

	int            shift, and enter state 31
	'-'            shift, and enter state 37
	'('            shift, and enter state 83
	var            shift, and enter state 84

	IntExp         goto state 82

State 38

	IntExp -> '(' . IntExp ')'                          (rule 60)
	BoolExp -> '(' . BoolExp ')'                        (rule 110)

	int            shift, and enter state 31
	subj           shift, and enter state 32
	pred           shift, and enter state 33
	obj            shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 38
	String         shift, and enter state 18
	var            shift, and enter state 41

	IntExp         goto state 80
	BoolExp        goto state 81
	StringExp      goto state 66

State 39

	List -> '[' . ListElem ']'                          (rule 27)

	int            shift, and enter state 31
	subj           shift, and enter state 32
	pred           shift, and enter state 33
	obj            shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 38
	String         shift, and enter state 18
	var            shift, and enter state 41

	ListElem       goto state 78
	Literal1       goto state 79
	IntExp         goto state 28
	BoolExp        goto state 29
	StringExp      goto state 30

State 40

	FilterEl -> '_' .                                   (rule 17)

	','            reduce using rule 17


State 41

	IntExp -> var . '+' IntExp                          (rule 46)
	IntExp -> var . '-' IntExp                          (rule 49)
	IntExp -> var . '*' IntExp                          (rule 52)
	IntExp -> var . '/' IntExp                          (rule 55)
	IntExp -> var . '^' IntExp                          (rule 58)
	BoolExp -> var . and BoolExp                        (rule 92)
	BoolExp -> var . or BoolExp                         (rule 95)
	StringExp -> var .                                  (rule 114)

	','            reduce using rule 114
	deq            reduce using rule 114
	'+'            shift, and enter state 71
	'-'            shift, and enter state 72
	'*'            shift, and enter state 73
	'/'            shift, and enter state 74
	'^'            shift, and enter state 75
	')'            reduce using rule 114
	']'            reduce using rule 114
	and            shift, and enter state 76
	or             shift, and enter state 77


State 42

	Func -> map '(' Cond . ')'                          (rule 14)

	')'            shift, and enter state 70


State 43

	Cond -> Action .                                    (rule 31)

	')'            reduce using rule 31
	':'            reduce using rule 31


State 44

	Action -> subj . '=' StringExp                      (rule 33)

	'='            shift, and enter state 69


State 45

	Action -> pred . '=' StringExp                      (rule 34)

	'='            shift, and enter state 68


State 46

	Action -> obj . '=' String                          (rule 35)
	Action -> obj . '=' IntExp                          (rule 36)
	Action -> obj . '=' BoolExp                         (rule 37)
	Action -> obj . '=' IntOp                           (rule 38)
	Action -> obj . '=' var                             (rule 39)

	'='            shift, and enter state 67


State 47

	Cond -> '(' . BoolExp ')' '?' Cond ':' Cond         (rule 32)

	int            shift, and enter state 31
	subj           shift, and enter state 32
	pred           shift, and enter state 33
	obj            shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 38
	String         shift, and enter state 18
	var            shift, and enter state 41

	IntExp         goto state 64
	BoolExp        goto state 65
	StringExp      goto state 66

State 48

	SList -> '[' SListElem . ']'                        (rule 23)

	']'            shift, and enter state 63


State 49

	SListElem -> StringExp1 .                           (rule 25)
	SListElem -> StringExp1 . ',' SListElem             (rule 26)

	','            shift, and enter state 62
	']'            reduce using rule 25


State 50

	JoinOption -> '-r' '-l' .                           (rule 19)

	'('            reduce using rule 19


State 51

	JoinOption -> '-l' '-r' .                           (rule 20)

	'('            reduce using rule 20


State 52

	Func -> join JoinOption '(' . Node ',' Node ')' SList    (rule 16)

	subj           shift, and enter state 59
	pred           shift, and enter state 60
	obj            shift, and enter state 61

	Node           goto state 58

State 53

	Query -> Query1 where CreateVars .                  (rule 2)

	%eof           reduce using rule 2


State 54

	CreateVars -> CreateVar . CreateVars                (rule 7)
	CreateVars -> CreateVar .                           (rule 8)

	var            shift, and enter state 55
	%eof           reduce using rule 8

	CreateVars     goto state 57
	CreateVar      goto state 54

State 55

	CreateVar -> var . '=' IntExp                       (rule 9)
	CreateVar -> var . '=' StringExp                    (rule 10)
	CreateVar -> var . '=' BoolExp                      (rule 11)
	CreateVar -> var . '=' IntOp                        (rule 12)

	'='            shift, and enter state 56


State 56

	CreateVar -> var '=' . IntExp                       (rule 9)
	CreateVar -> var '=' . StringExp                    (rule 10)
	CreateVar -> var '=' . BoolExp                      (rule 11)
	CreateVar -> var '=' . IntOp                        (rule 12)

	int            shift, and enter state 31
	subj           shift, and enter state 32
	pred           shift, and enter state 33
	obj            shift, and enter state 149
	true           shift, and enter state 35
	false          shift, and enter state 36
	'-'            shift, and enter state 150
	'('            shift, and enter state 151
	String         shift, and enter state 18
	var            shift, and enter state 161

	IntExp         goto state 157
	IntOp          goto state 158
	BoolExp        goto state 159
	StringExp      goto state 160

State 57

	CreateVars -> CreateVar CreateVars .                (rule 7)

	%eof           reduce using rule 7


State 58

	Func -> join JoinOption '(' Node . ',' Node ')' SList    (rule 16)

	','            shift, and enter state 156


State 59

	Node -> subj .                                      (rule 117)

	','            reduce using rule 117
	')'            reduce using rule 117


State 60

	Node -> pred .                                      (rule 118)

	','            reduce using rule 118
	')'            reduce using rule 118


State 61

	Node -> obj .                                       (rule 119)

	','            reduce using rule 119
	')'            reduce using rule 119


State 62

	SListElem -> StringExp1 ',' . SListElem             (rule 26)

	String         shift, and enter state 18
	'_'            shift, and enter state 19
	var            shift, and enter state 20

	SListElem      goto state 155
	StringExp      goto state 15
	StringExp1     goto state 49

State 63

	SList -> '[' SListElem ']' .                        (rule 23)

	String         reduce using rule 23
	'|'            reduce using rule 23
	where          reduce using rule 23
	var            reduce using rule 23
	%eof           reduce using rule 23


State 64

	IntExp -> IntExp . '+' IntExp                       (rule 45)
	IntExp -> IntExp . '+' var                          (rule 47)
	IntExp -> IntExp . '-' IntExp                       (rule 48)
	IntExp -> IntExp . '-' var                          (rule 50)
	IntExp -> IntExp . '*' IntExp                       (rule 51)
	IntExp -> IntExp . '*' var                          (rule 53)
	IntExp -> IntExp . '/' IntExp                       (rule 54)
	IntExp -> IntExp . '/' var                          (rule 56)
	IntExp -> IntExp . '^' IntExp                       (rule 57)
	IntExp -> IntExp . '^' var                          (rule 59)
	BoolExp -> IntExp . deq IntExp                      (rule 97)
	BoolExp -> IntExp . deq var                         (rule 98)
	BoolExp -> IntExp . '<' IntExp                      (rule 99)
	BoolExp -> IntExp . '>' IntExp                      (rule 100)
	BoolExp -> IntExp . '<' obj                         (rule 101)

	'<'            shift, and enter state 92
	'>'            shift, and enter state 93
	deq            shift, and enter state 94
	'+'            shift, and enter state 95
	'-'            shift, and enter state 96
	'*'            shift, and enter state 97
	'/'            shift, and enter state 98
	'^'            shift, and enter state 99


State 65

	Cond -> '(' BoolExp . ')' '?' Cond ':' Cond         (rule 32)
	BoolExp -> BoolExp . and BoolExp                    (rule 91)
	BoolExp -> BoolExp . and var                        (rule 93)
	BoolExp -> BoolExp . or BoolExp                     (rule 94)
	BoolExp -> BoolExp . or var                         (rule 96)

	')'            shift, and enter state 154
	and            shift, and enter state 90
	or             shift, and enter state 91


State 66

	BoolExp -> StringExp . deq StringExp                (rule 103)
	BoolExp -> StringExp . deq subj                     (rule 104)
	BoolExp -> StringExp . deq pred                     (rule 106)
	BoolExp -> StringExp . deq obj                      (rule 108)

	deq            shift, and enter state 89


State 67

	Action -> obj '=' . String                          (rule 35)
	Action -> obj '=' . IntExp                          (rule 36)
	Action -> obj '=' . BoolExp                         (rule 37)
	Action -> obj '=' . IntOp                           (rule 38)
	Action -> obj '=' . var                             (rule 39)

	int            shift, and enter state 31
	subj           shift, and enter state 32
	pred           shift, and enter state 33
	obj            shift, and enter state 149
	true           shift, and enter state 35
	false          shift, and enter state 36
	'-'            shift, and enter state 150
	'('            shift, and enter state 151
	String         shift, and enter state 152
	var            shift, and enter state 153

	IntExp         goto state 146
	IntOp          goto state 147
	BoolExp        goto state 148
	StringExp      goto state 66

State 68

	Action -> pred '=' . StringExp                      (rule 34)

	String         shift, and enter state 18
	var            shift, and enter state 20

	StringExp      goto state 145

State 69

	Action -> subj '=' . StringExp                      (rule 33)

	String         shift, and enter state 18
	var            shift, and enter state 20

	StringExp      goto state 144

State 70

	Func -> map '(' Cond ')' .                          (rule 14)

	String         reduce using rule 14
	'|'            reduce using rule 14
	where          reduce using rule 14
	var            reduce using rule 14
	%eof           reduce using rule 14


State 71

	IntExp -> var '+' . IntExp                          (rule 46)

	int            shift, and enter state 31
	'-'            shift, and enter state 37
	'('            shift, and enter state 83
	var            shift, and enter state 84

	IntExp         goto state 143

State 72

	IntExp -> var '-' . IntExp                          (rule 49)

	int            shift, and enter state 31
	'-'            shift, and enter state 37
	'('            shift, and enter state 83
	var            shift, and enter state 84

	IntExp         goto state 142

State 73

	IntExp -> var '*' . IntExp                          (rule 52)

	int            shift, and enter state 31
	'-'            shift, and enter state 37
	'('            shift, and enter state 83
	var            shift, and enter state 84

	IntExp         goto state 141

State 74

	IntExp -> var '/' . IntExp                          (rule 55)

	int            shift, and enter state 31
	'-'            shift, and enter state 37
	'('            shift, and enter state 83
	var            shift, and enter state 84

	IntExp         goto state 140

State 75

	IntExp -> var '^' . IntExp                          (rule 58)

	int            shift, and enter state 31
	'-'            shift, and enter state 37
	'('            shift, and enter state 83
	var            shift, and enter state 84

	IntExp         goto state 139

State 76

	BoolExp -> var and . BoolExp                        (rule 92)

	int            shift, and enter state 31
	subj           shift, and enter state 32
	pred           shift, and enter state 33
	obj            shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 38
	String         shift, and enter state 18
	var            shift, and enter state 41

	IntExp         goto state 64
	BoolExp        goto state 138
	StringExp      goto state 66

State 77

	BoolExp -> var or . BoolExp                         (rule 95)

	int            shift, and enter state 31
	subj           shift, and enter state 32
	pred           shift, and enter state 33
	obj            shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 38
	String         shift, and enter state 18
	var            shift, and enter state 41

	IntExp         goto state 64
	BoolExp        goto state 137
	StringExp      goto state 66

State 78

	List -> '[' ListElem . ']'                          (rule 27)

	']'            shift, and enter state 136


State 79

	ListElem -> Literal1 .                              (rule 29)
	ListElem -> Literal1 . ',' ListElem                 (rule 30)

	','            shift, and enter state 135
	']'            reduce using rule 29


State 80

	IntExp -> IntExp . '+' IntExp                       (rule 45)
	IntExp -> IntExp . '+' var                          (rule 47)
	IntExp -> IntExp . '-' IntExp                       (rule 48)
	IntExp -> IntExp . '-' var                          (rule 50)
	IntExp -> IntExp . '*' IntExp                       (rule 51)
	IntExp -> IntExp . '*' var                          (rule 53)
	IntExp -> IntExp . '/' IntExp                       (rule 54)
	IntExp -> IntExp . '/' var                          (rule 56)
	IntExp -> IntExp . '^' IntExp                       (rule 57)
	IntExp -> IntExp . '^' var                          (rule 59)
	IntExp -> '(' IntExp . ')'                          (rule 60)
	BoolExp -> IntExp . deq IntExp                      (rule 97)
	BoolExp -> IntExp . deq var                         (rule 98)
	BoolExp -> IntExp . '<' IntExp                      (rule 99)
	BoolExp -> IntExp . '>' IntExp                      (rule 100)
	BoolExp -> IntExp . '<' obj                         (rule 101)

	'<'            shift, and enter state 92
	'>'            shift, and enter state 93
	deq            shift, and enter state 94
	'+'            shift, and enter state 95
	'-'            shift, and enter state 96
	'*'            shift, and enter state 97
	'/'            shift, and enter state 98
	'^'            shift, and enter state 99
	')'            shift, and enter state 134


State 81

	BoolExp -> BoolExp . and BoolExp                    (rule 91)
	BoolExp -> BoolExp . and var                        (rule 93)
	BoolExp -> BoolExp . or BoolExp                     (rule 94)
	BoolExp -> BoolExp . or var                         (rule 96)
	BoolExp -> '(' BoolExp . ')'                        (rule 110)

	')'            shift, and enter state 133
	and            shift, and enter state 90
	or             shift, and enter state 91


State 82

	IntExp -> IntExp . '+' IntExp                       (rule 45)
	IntExp -> IntExp . '+' var                          (rule 47)
	IntExp -> IntExp . '-' IntExp                       (rule 48)
	IntExp -> IntExp . '-' var                          (rule 50)
	IntExp -> IntExp . '*' IntExp                       (rule 51)
	IntExp -> IntExp . '*' var                          (rule 53)
	IntExp -> IntExp . '/' IntExp                       (rule 54)
	IntExp -> IntExp . '/' var                          (rule 56)
	IntExp -> IntExp . '^' IntExp                       (rule 57)
	IntExp -> IntExp . '^' var                          (rule 59)
	IntExp -> '-' IntExp .                              (rule 61)

	','            reduce using rule 61
	'<'            reduce using rule 61
	'>'            reduce using rule 61
	deq            reduce using rule 61
	'+'            reduce using rule 61
	'-'            reduce using rule 61
	'*'            reduce using rule 61
	'/'            reduce using rule 61
	'^'            reduce using rule 61
	')'            reduce using rule 61
	']'            reduce using rule 61
	':'            reduce using rule 61
	and            reduce using rule 61
	or             reduce using rule 61
	var            reduce using rule 61
	%eof           reduce using rule 61


State 83

	IntExp -> '(' . IntExp ')'                          (rule 60)

	int            shift, and enter state 31
	'-'            shift, and enter state 37
	'('            shift, and enter state 83
	var            shift, and enter state 84

	IntExp         goto state 132

State 84

	IntExp -> var . '+' IntExp                          (rule 46)
	IntExp -> var . '-' IntExp                          (rule 49)
	IntExp -> var . '*' IntExp                          (rule 52)
	IntExp -> var . '/' IntExp                          (rule 55)
	IntExp -> var . '^' IntExp                          (rule 58)

	'+'            shift, and enter state 71
	'-'            shift, and enter state 72
	'*'            shift, and enter state 73
	'/'            shift, and enter state 74
	'^'            shift, and enter state 75


State 85
